Encapsulated API call and corrected some layout issues

--- a/src/components/Loading/loading.module.css
+++ b/src/components/Loading/loading.module.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px;
+    height: 100%;
+    min-height: 400px;
 }
 
 .fixed {
